tests/fixtures/invalid/pow_none_str_none.py
# Cannot call pow() with None, Str, None
x = pow(None, "hello", None)
